manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: weechat
  labels:
    name: weechat
  namespace: weechat
spec:
  type: NodePort
  ports:
    - port: 22
      nodePort: 32015
      protocol: TCP
      name: ssh
    - port: 32016
      nodePort: 32016
      protocol: UDP
      name: mosh
  selector:
    app: weechat
---
apiVersion: v1
kind: Service
metadata:
  name: weechat-urlserver
  labels:
    name: weechat-urlserver
  namespace: weechat
spec:
  ports:
    - port: 9000
      name: http
  selector:
    app: weechat
